--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,58 @@
-theme: jekyll-theme-minimal
+# Welcome to Jekyll!
+#
+
+# Site settings
 title: Ventilastation
-description: La consola para videojuegos circulares
+description: |
+  La consola para videojuegos circulares  
+  de código y hardware abierto  
+owner: alecu # or company name
+first_published: 2015 # if migrating another site, the year of your first publish
+email: ventilastation@protocultura.net
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://ventilastation.protocultura.net" # the base hostname & protocol for your site
+social:
+  #twitter: https://twitter.com/<username>
+  github: https://github.com/alecu/ventilastation
+  #facebook-official: https://facebook.com/<username>
+  #linkedin-square: https://linkedin.com/in/<username>
+  #google-plus-square: https://plus.google.com/u/0/+<username>
+  #email: /contact/
+  #flickr:
+  #instagram:
+  #youtube-square:
+  #spotify:
+  #stack-overflow:
+  #vimeo:
+  #reddit:
+  #stubleupon:
+  #delicious:
+  #pied-piper:
+  #digg:
+  #soundcloud:
+  #deviantart:
+  #angellist:
+  #tumblr-square:
+  #stackexchange:
+  #weibo:
+  #trello:
+  #foursquare:
+  #linux:
+  #bitbucket-square:
+  #vk:
+  #slack:
+  #vine:
+  #weixin:
+  #yelp:
+  #skyatlas:
+  #leanpub:
+  #connectdevelop:
+  #ils:
+  #forumbee:
+  #tripadvisor:
+  #amazon:
+
+# Build settings
+markdown: kramdown
+#sass:
+#  style: compressed
